# bull-bear

./: .gitignore  Procfile  README.md  db.sqlite3  heroku.yml  prediction.py  pyproject.toml  requirements.txt
bull_and_bear/: admin.py  forms.py  models.py  prediction.py  tests.py  urls.py  views.py
bull_and_bear/migrations/: 0001_initial.py  0002_saved_predictions.py  0003_auto_20201104_0507.py
forecaster_project/: .env  settings.py
prediction/: getting_data.ipynb  minimize_size_weights.ipynb
templates/: base.html
templates/bull_and_bear/: about.html  home.html  watchlist.html
templates/partials/: _footer.html  _navbar.html  _pagination.html
templates/users/: login.html  logout.html  profile.html  register.html
