[tool.poetry]
name = "bull-bear"
version = "0.1.0"
description = ""
authors = ["ticochuck <chucklivilla@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.2"
djangorestframework = "^3.12.1"
django-cors-headers = "^3.5.0"
django-environ = "^0.4.5"
whitenoise = "^5.2.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
django-crispy-forms = "^1.9.2"
jupyterlab = "^2.2.9"
pandas = "^1.1.3"
finnhub-python = "^2.2.1"
numpy = "^1.19.2"
sklearn = "^0.0"
matplotlib = "^3.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
